# Crossword-standalone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  arrayIndexUtility.h  arrayList.c  arrayList.h  arrayMathUtility.h  arrayUtility.h  boxDrawing.c  boxDrawing.h  charArray.c  charArray.h  charArrayPair.c  charArrayPair.h  charArrayPairArray.c  charArrayPairArray.h  charArraySplit.c  charArraySplit.h  charArrayTrio.c  charArrayTrio.h  charArrayTrioArray.c  charArrayTrioArray.h  charGrid.c  charGrid.h  characterSet.c  characterSet.h  clearInput.c  clearInput.h  consoleCodePage.c  consoleCodePage.h  consoleProcessing.c  consoleProcessing.h  crossword.c  crossword.h  crosswordWord.c  crosswordWord.h  fileUtility.c  fileUtility.h  insertionSort.c  (+29 more)
.github/workflows/: build.yml
