cmake_minimum_required(VERSION 3.22)
project(Crossword-standalone)

set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 14)

add_executable(Crossword-standalone
abs.h
arrayIndexUtility.h
arrayList.c
arrayList.h
arrayMathUtility.h
boxDrawing.c
boxDrawing.h
charArray.c
charArray.h
charArrayPair.c
charArrayPair.h
charArrayPairArray.c
charArrayPairArray.h
charArraySplit.c
charArraySplit.h
charArrayTrio.c
charArrayTrio.h
charArrayTrioArray.c
charArrayTrioArray.h
charGrid.c
charGrid.h
characterSet.c
characterSet.h
clearInput.c
clearInput.h
consoleCodePage.c
consoleCodePage.h
consoleProcessing.c
consoleProcessing.h
crossword.c
crossword.h
crosswordWord.c
crosswordWord.h
fileUtility.c
fileUtility.h
insertionSort.c
insertionSort.h
loopUtility.h
mathUtility.h
memMacro.h
printTime.c
printTime.h
randomTable.c
randomTable.h
rawRead.c
rawRead.h
seedyShuffle.h
shuffle.h
spansUtility.h
stringConstexpr.h
stringHash.h
swapping.h
valRead.c
valRead.h
wprintTime.c
wprintTime.h
wrawRead.c
wrawRead.h
wvalRead.c
wvalRead.h
main.cpp
)
